Committed working version of LAMMPS/OpenFOAM sockets here while merging all these to the APPS

--- a/examples/sockets/OpenFOAM/OpenFOAM-3.0.1/cpl-socket/Makefile
+++ b/examples/sockets/OpenFOAM/OpenFOAM-3.0.1/cpl-socket/Makefile
@@ -2,10 +2,12 @@ all:
 	@wmake libso src/CPLSocketFOAM
 	@wmake src/solvers/CPLIcoFoam
 	@wmake src/solvers/CPLporousIcoFoam
+	@wmake src/solvers/CPLSediFoam
 clean:
 	@wclean src/CPLSocketFOAM
 	@wclean src/solvers/CPLIcoFoam
 	@wclean src/solvers/CPLporousIcoFoam
+	@wclean src/solvers/CPLSediFoam
 	@rm -r lib
 	@rm -r bin
 patch-scotch:                                                                                                                                                                                                                                    
