Finalised development and implemented in gtests the new CPL_field class. Part way through working field class into force class, which simplifies the force class and makes design cleaner.

--- a/test/gtests/Makefile
+++ b/test/gtests/Makefile
@@ -34,7 +34,7 @@ CPPFLAGS += -isystem $(GTEST_DIR) -isystem $(GMOCK_DIR)
 
 # Flags passed to the C++ compiler.
 CXX = mpic++
-CXXFLAGS += -g -Wall -Wextra -pthread $(INCS)
+CXXFLAGS += -g -Wall -std=c++11 -Wextra -pthread $(INCS)
 
 # All tests produced by this Makefile.  Remember to add new tests you
 # created to the list.
