Tried to fix build

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,18 +9,13 @@ python:
 
 compiler: gcc
 addons:
-apt:
-  sources:
-    - ubuntu-toolchain-r-test
-  packages:
-    - g++-5 gcc-5 libstdc++-5-dev gfortran-5
-env:
-    - DIST="precise"
-    - GCC_VERSION=5
-    - CXX_COMPILER=g++-5
-    - C_COMPILER=gcc-5
-    - F_COMPILER=gfortran-5
-    - MPI=mpich3
+    apt:
+      sources:
+        - ubuntu-toolchain-r-test
+      packages:
+        - g++-5 gcc-5 libstdc++-5-dev gfortran-5
+    env:
+        - DIST="precise" GCC_VERSION=5 CXX_COMPILER=g++-5 C_COMPILER=gcc-5 F_COMPILER=gfortran-5 MPI=mpich3
 
 branches:
   only:
