--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,43 @@ language: python
 python:
     - 2.7
 
-compiler: gcc
-addons:
-    apt:
-      sources:
-        - ubuntu-toolchain-r-test
-      packages:
-        - g++-5 gcc-5 libstdc++-5-dev gfortran-5
-    env:
-        - GCC_VERSION=5 CXX_COMPILER=g++-5 C_COMPILER=gcc-5 F_COMPILER=gfortran-5 MPI=mpich3
+# set up build matrix
+matrix:
+  include:
+    #Build for 12.04
+    - os: linux
+      dist: precise
+      compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-5 gcc-5 libstdc++-5-dev gfortran-5
+      env:
+        - GCC_VERSION=5
+        - CXX_COMPILER=g++-5
+        - C_COMPILER=gcc-5
+        - F_COMPILER=gfortran-5
+        - MPI=mpich3
+
+    #Build for 14.04
+    - os: linux
+      dist: trusty
+      compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-6 gcc-6 libstdc++-6-dev gfortran-6
+      # change default compiler to newer gcc-6
+      env:
+        - GCC_VERSION=6
+        - CXX_COMPILER=g++-6
+        - C_COMPILER=gcc-6
+        - F_COMPILER=gfortran-6
+        - MPI=mpich3
 
 branches:
   only:
