--- a/examples/coupled/fcc/fcc_fixedParticles/lammps/fcc.in
+++ b/examples/coupled/fcc/fcc_fixedParticles/lammps/fcc.in
@@ -8,6 +8,13 @@ newton 	 			off
 comm_modify 	 	mode single vel yes
 processors 	 		1 1 1
 
+variable            G equal 2.9e4 
+variable            nu equal 0.2
+variable            mu equal 0.25
+
+variable            Kn equal 4*$G/(3*(1-${nu}))
+variable            Kt equal 4*$G/(2-${nu})
+
 
 variable 			lat_scale equal 0.8/10
 lattice				fcc ${lat_scale}
@@ -26,7 +33,7 @@ neigh_modify 		once yes exclude type 1 1 #use this when integrator is off
 # neigh_modify 		delay 0 #use this when integrator is on
 
 #PRE-FIX SETTINGS
-pair_style 	 		gran/shm/history 290000 0.2 0.0
+pair_style	        gran/hertz/history ${Kn} ${Kt} 0. 0. ${mu} 0
 pair_coeff 	 		* *
 timestep 	 		2e-5 #timestep is reduced to ensure local interactions
 run_style 	 		verlet
@@ -37,7 +44,7 @@ variable  			yhi equal 5.4+0.5*${diameter}
 
 # fix 	 			1 all nve/sphere
 # fix 				2 all gravity 981. vector 0 -1 0
-fix 	 			3 all wall/gran shm/history 290000 0.2 0.0 yplane ${ylo} ${yhi}
+fix 		        3 all wall/gran hertz/history ${Kn} ${Kt} 0. 0. ${mu} 0 yplane ${ylo} ${yhi}
 
 #OUTPUT SETTINGS
 thermo 				20
