--- a/.travis.yml
+++ b/.travis.yml
@@ -56,9 +56,9 @@ matrix:
             - g++-7 gcc-7 libstdc++-7-dev gfortran-7
       env:
         - GCC_VERSION=7
-        - CXX_COMPILER=g++-7
-        - C_COMPILER=gcc-7
-        - F_COMPILER=gfortran-7
+        - CXX_COMPILER=g++
+        - C_COMPILER=gcc
+        - F_COMPILER=gfortran
         - MPI=openmpi
         - platform=openmpi_gcc
 
