--- a/.travis.yml
+++ b/.travis.yml
@@ -97,7 +97,7 @@ script:
     - make test-valgrind
     - make test-pytest-mapping
     - make test-gtests
-    - make test_Dragmodels
+#    - make test_Dragmodels
 #    - make test-granular
 #    - make webdocs-all
 
