--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,38 +15,59 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-20.04
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-          
 
   test:
     runs-on: ubuntu-20.04
     
+    defaults:
+      run:
+        working-directory: ./cpl-library
+        
     steps:
+          
       - name: Update repo
         run: sudo apt-get update -y 
-
+        
       - name: Install mpich
-        run:  |
-          sudo apt-get update -y 
-          sudo apt-get install -y mpich   
+        run: sudo apt-get install -y mpich   
+        
+      - name: Install valgrind
+        run: sudo apt-get install -y valgrind
      
+      - name: Update pip
+        run: python -m pip install --upgrade pip
+
+      - name: Install pytest
+        run: pip install pytest
+          
       - name: Install mpi4py
         run: pip install mpi4py
+
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
+        
+      - name: Build cpl-library
+        run: |
+          ls ./
+          make
+          ls ./lib/
+          
+      - name: Initialisation test
+        run: make test-pytest-initialisation
+
+      - name: Mapping test
+        run: make test-pytest-mapping  
+        
+      - name: Examples test
+        run: make test-examples
+        
+      - name: memory test
+        run: make test-valgrind
+        
+      - name: Field/Force test
+        run: make test-gtests
+        
+      - name: Drag model test
+        run: make test_Dragmodels
+        
+        
