--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,9 @@ jobs:
       - name: Install mpi4py
         run: pip install mpi4py
 
+      - name: Install scientific packages
+        run: pip install numpy scipy matplotlib
+
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
         
