--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,11 +18,11 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Build the Docker image
-        run: docker build . --file ./utils/Dockerfile --tag cpllibrary/cpl-library
+        run: docker build . --file ./utils/Dockerfile --tag cpl-library
         
       - name: Run tests inside the container
-        run: docker run make test-all
-        
+        run: docker run cpl-library make test-all
+              
    on-failure:
      runs-on: ubuntu-20.04
      if: ${{ github.event.workflow_run.conclusion == 'failure' }}
