--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,11 +18,8 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Build the Docker image
-        run: docker build . --file ./utils/Dockerfile --tag cpl-library
+        run: docker build . --file ./utils/Dockerfile --tag cpllibrary/cpl-library
         
-      - name: Run tests inside the Docker container
-        run: docker run cpl-library make test-all
-      
       #If the tests pass, login to DockerHub, build and push
       - name: Login to DockerHub
         uses: docker/login-action@v2
@@ -34,6 +31,10 @@ jobs:
         with:
           push: true
           tags: cpllibrary/cpl-library:latest
+          dockerfile: ./utils/Dockerfile
+          
+      - name: Run tests inside the Docker container
+        run: docker run cpllibrary/cpl-library make test-init
               
    on-failure:
      runs-on: ubuntu-20.04
