--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,8 +34,9 @@ jobs:
           tags: cpllibrary/cpl-library:latest
           
       - name: Run tests inside the Docker container
-        run: docker run cpllibrary/cpl-library make test-init
-              
+        run: docker run cpllibrary/cpl-library /bin/bash -c "source SOURCEME.sh; make test-pytest-initialisation" 
+                        
+                        
    on-failure:
      runs-on: ubuntu-20.04
      if: ${{ github.event.workflow_run.conclusion == 'failure' }}
