--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,12 +20,16 @@ jobs:
       - name: Build the Docker image
         run: docker build . --file ./utils/Dockerfile --tag cpllibrary/cpl-library
         
-      #If the tests pass, login to DockerHub, build and push
+      - name: Run tests inside the Docker container
+        run: docker run cpllibrary/cpl-library /bin/bash -c "source SOURCEME.sh; make test-pytest-initialisation" 
+      
+      #If the build+tests passed, login to DockerHub, build and then push
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
@@ -33,9 +37,15 @@ jobs:
           push: true
           tags: cpllibrary/cpl-library:latest
           
-      - name: Run tests inside the Docker container
-        run: docker run cpllibrary/cpl-library /bin/bash -c "source SOURCEME.sh; make test-pytest-initialisation" 
-                        
+      #Build and test could be replaced by build+push and then the docker-run-action
+      #to test this pushed version but will be after version already updated
+
+      #- name: Run tests inside the Docker container
+      #  uses: addnab/docker-run-action@v3
+      #  with:
+      #    image: cpllibrary/cpl-library:latest
+      #    run:  docker run cpllibrary/cpl-library /bin/bash -c "source SOURCEME.sh; make test-pytest-initialisation"
+          
                         
    on-failure:
      runs-on: ubuntu-20.04
