--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,8 +43,8 @@ jobs:
       #- name: Install mpich
       #  run: sudo apt-get install -y mpich   
 
-      #- name: Install mpi4py
-      #  run: pip install mpi4py
+      - name: Install mpi4py
+        run: pip install mpi4py
         
       - name: Install valgrind
         run: sudo apt-get install -y valgrind
