--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,8 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        mpi: [ 'mpich', 'openmpi' ]
+        #mpi: [ 'mpich', 'openmpi' ]
+        mpi: [ 'mpich' ]
         
     steps:
           
@@ -41,10 +42,13 @@ jobs:
           mpi: ${{ matrix.mpi }}
           
       - name: Set defaul compiler and MPI 
-        run: echo "${{ matrix.mpi }}_gcc" > make/PLATFORM
+        run: |
+          pwd
+          ls ./
+      #  run: echo "${{ matrix.mpi }}_gcc" > make/PLATFORM
         
-      - name: Check MPI version
-        run: cat ./make/PLATFORM
+      #- name: Check MPI version
+      #  run: cat ./make/PLATFORM
       #- name: Install mpich
       #  run: sudo apt-get install -y mpich   
 
