--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        mpi: [ 'mpich', 'openmpi' ]
+        mpi: [ 'mpich'] #, 'openmpi' ]
         
     steps:
           
