--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ on:
       - make/**
       - examples/**
       - .github/**
+      - Makefile
+      - SOURCEME.sh
 
   pull_request:
     branches: [ "master" ]
