--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,12 +27,14 @@ on:
 jobs:
 
   test:
-    runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
       matrix:
-        mpi: [ 'mpich'] #, 'openmpi' ]
-        
+        os: [ubuntu-18.04, ubuntu-20.04, ubuntu-22.04]
+        mpi: [ 'mpich', 'openmpi' ]
+
+    runs-on: ${{ matrix.os }}
+
     steps:
           
       - name: Update repo
@@ -81,38 +83,42 @@ jobs:
           source SOURCEME.sh
           make test-pytest-initialisation
 
-      - name: memory test
+#      Valgrind test dropped on Actions as mpich on 
+#      server raises spurious leaks from mpi, see e.g.
+#      https://valgrind.org/docs/manual/mc-manual.html#mc-manual.mpiwrap
+#      and the valgrind-mpi package which provides libmpiwrap os from openmpi
+#      - name: memory test
+#        if: always()
+#        run: |
+#          source SOURCEME.sh
+#          make test-valgrind
+
+      - name: Examples test
         if: always()
         run: |
           source SOURCEME.sh
-          make test-valgrind
+          make test-examples
+               
+      - name: Field/Force test
+        if: always()
+        run: |
+          source SOURCEME.sh
+          make test-gtests
+        
+      - name: Drag model test
+        if: always()
+        run: |
+          source SOURCEME.sh
+          make test_Dragmodels
+                
+      - name: Mapping test
+        if: always()
+        run: |
+          source SOURCEME.sh
+          make test-pytest-mapping  
+        
 
-#      - name: Examples test
-#        if: always()
-#        run: |
-#          source SOURCEME.sh
-#          make test-examples
-#               
-#      - name: Field/Force test
-#        if: always()
-#        run: |
-#          source SOURCEME.sh
-#          make test-gtests
-#        
-#      - name: Drag model test
-#        if: always()
-#        run: |
-#          source SOURCEME.sh
-#          make test_Dragmodels
-#                
-#      - name: Mapping test
-#        if: always()
-#        run: |
-#          source SOURCEME.sh
-#          make test-pytest-mapping  
-#        
-
-      - uses: actions/checkout@v2
-      - name: Setup tmate session
-        if: ${{ failure() }}
-        uses: mxschmitt/action-tmate@v3
+#      - uses: actions/checkout@v2
+#      - name: Setup tmate session
+#        if: ${{ failure() }}
+#        uses: mxschmitt/action-tmate@v3
