--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04]
+        os: [ubuntu-20.04]
         mpi: [ 'mpich' ]
         #os: [ubuntu-18.04, ubuntu-20.04, ubuntu-22.04]
         #mpi: [ 'mpich', 'openmpi' ]
