--- a/examples/LAMMPS_OPENFOAM/lammps.in
+++ b/examples/LAMMPS_OPENFOAM/lammps.in
@@ -30,7 +30,7 @@ variable	ylobuf equal ${ylo}-${buf}
 
 #type    fluidtype 1
 #type    lowertype 2
-#type    lowersitetype 4
+#type    lowersitetype 3
 
 #Basic simulation setup
 units		    lj
@@ -42,19 +42,10 @@ boundary		p f p
 #Add a padded buffer at top and bottom as tethering allows molecules to wander slightly
 lattice         fcc ${rho}
 region          simbox block 0 $x ${ylobuf} ${y} 0 $z 
-create_box      5 simbox bond/types 1 extra/bond/per/atom 1
+create_box      3 simbox bond/types 1 extra/bond/per/atom 1
 region		    latticeregion block INF INF ${ylo} ${y} INF INF
 create_atoms    1 region latticeregion
 
-#Create lj pair styles and set wall/site terms to zero
-mass            * 1.0
-pair_style      lj/cut ${rc}
-pair_coeff       1 1 1.0 1.0
-pair_coeff       1 2 1.0 1.0
-pair_coeff       2 2 1.0 1.0
-pair_coeff       1 4 0.0 0.0
-pair_coeff       2 4 0.0 0.0
-pair_coeff       4 4 0.0 0.0
 
 #Set wall region
 region		    lower block INF INF ${ylo} 0.0 INF INF
@@ -68,12 +59,29 @@ group		    lowertherm region lowertherm
 group           nottherm subtract all lowertherm
 
 #Create a set of tethering sites (as molecules)
-create_atoms    4 region lower
-group		    lowersites type 4
+create_atoms    3 region lower
+group		    lowersites type 3
 group		    sites union lowersites
 
 #Get liquid molecules to a flow group
 group		    flow subtract all wall sites
+group		    flow type 1
+
+#Create lj pair styles and set wall/site terms to zero
+mass            * 1.0
+pair_style      lj/cut ${rc}
+pair_coeff       1 1 1.0 1.0
+pair_coeff       1 2 1.0 1.0
+pair_coeff       1 3 0.0 0.0
+
+pair_coeff       2 1 1.0 1.0
+pair_coeff       2 2 1.0 1.0
+pair_coeff       2 3 0.0 0.0
+
+pair_coeff       3 1 0.0 0.0
+pair_coeff       3 2 0.0 0.0
+pair_coeff       3 3 0.0 0.0
+
 
 #Set imaginary site particles to not interact
 bond_style       harmonic
