--- a/examples/LAMMPS_OPENFOAM/lammps.in
+++ b/examples/LAMMPS_OPENFOAM/lammps.in
@@ -74,12 +74,12 @@ pair_coeff       1 1 1.0 1.0
 pair_coeff       1 2 1.0 1.0
 pair_coeff       1 3 0.0 0.0
 
-pair_coeff       2 1 1.0 1.0
+#pair_coeff       2 1 1.0 1.0
 pair_coeff       2 2 1.0 1.0
 pair_coeff       2 3 0.0 0.0
 
-pair_coeff       3 1 0.0 0.0
-pair_coeff       3 2 0.0 0.0
+#pair_coeff       3 1 0.0 0.0
+#pair_coeff       3 2 0.0 0.0
 pair_coeff       3 3 0.0 0.0
 
 
