Turned interp_BC off so boundarys are correcltly set

--- a/examples/LAMMPS_OPENFOAM/cpl/COUPLER.in
+++ b/examples/LAMMPS_OPENFOAM/cpl/COUPLER.in
@@ -38,7 +38,7 @@ OVERLAP_EXTENTS
 1
 8
 1
-4
+3
 1
 8
 
@@ -87,6 +87,9 @@ BOUNDARY_EXTENTS
 1
 8
 
+
+CPL_CFD_BC_SLICE
+1
 
 ###############################################################################
 #
